# Manage-Directory-CI-CD-Robot

./: README.md  main.py  pyproject.toml
Test/: app.py  basicrobot.robot  google_test.robot  log.html  output.xml  report.html  robot-test1.robot  robot-test2.robot  test_api.py  test_mockaip.py  testsuit1.robot
Test/merged_results/: log.html  output.xml  report.html
Test/output1/: log.html  output1.xml  report.html
Test/output2/: log.html  output2.xml  report.html
Test/output3/: log.html  output3.xml  report.html
Test/output4/: log.html  output4.xml  report.html
Test/results/AllReport/: All_log.html  All_output.xml  All_report.html
resources/: ChromeHelper.py  keywords.robot  opentest.py  variables.robot
results/AllReport/: All_log.html  All_output.xml  All_report.html  log.html  report.html
results/TestSuit/: log.html  output.xml  report.html
results/TestSuit1/: log.html  output.xml  report.html
results/TestSuit2/: log.html  output.xml  report.html
