[project]
name = "advrobot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.2",
    "pytest>=8.4.2",
    "pytest-html>=4.1.1",
    "requests>=2.32.5",
    "robotframework>=7.3.2",
    "robotframework-seleniumlibrary>=6.7.1",
    "selenium>=4.34.1",
]
